# 6NF_DSL

./: .gitignore  .tool-versions  Makefile  README.md  SixNF.g4  cli  example.6nf  postgres.py  pyproject.toml  ruff.toml  sast.py
