[project]
name = "6nf-dsl-antlr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "click>=8.2.1",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    "antlr4-tools>=0.2.2",
]
lint = [
    "ruff>=0.12.7",
]
